# workflow-orchestration-queue-foxtrot54

./: .ai-repository-summary.md  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  progress-report.md  pyproject.toml  run_opencode_prompt.sh  test-results-pester.xml
.devcontainer/: devcontainer.json
.github/: .labels.json  SETUP.md
.github/.devcontainer/: devcontainer.json
.github/workflows/: validate.yml
debrief-and-document/: debrief-report.md  trace.md
docs/: README.md  debrief-report-project-setup.md  workflow-issues.md
docs/validation/: PROGRESS_REPORT_init-existing-repository_2026-04-06.md  VALIDATION_REPORT_init-existing-repository_2026-04-06.md  progress-report-create-agents-md-file.md  progress-report-create-app-plan.md  progress-report-create-project-structure.md  progress-report-debrief-and-document.md  progress-report-init-existing-repository.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md  workflow-plan.md
src/osapow/: __init__.py  __main__.py
src/osapow/models/: __init__.py  work_item.py
src/osapow/notifier/: __init__.py  service.py
src/osapow/queue/: __init__.py  github_queue.py
src/osapow/sentinel/: __init__.py  orchestrator.py
test/: test-opencode-run.sh
tests/: conftest.py  test_github_queue.py  test_orchestrator.py  test_work_item.py
